--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,10 @@
     <groupId>com.example</groupId>
     <artifactId>Myapp</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+
+    <!-- Ajout pour générer un WAR déployable sur Tomcat -->
+    <packaging>war</packaging>
+
     <name>demo</name>
     <description>Demo project for Spring Boot</description>
 
