--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
     <version>0.0.1-SNAPSHOT</version>
 
     <!-- Ajout pour générer un WAR déployable sur Tomcat -->
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
 
     <name>demo</name>
     <description>Demo project for Spring Boot</description>
