--- a/deployment.yaml
+++ b/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
         - name: country-service-container
-          image: amineamouna12345/my-country-service:2 
+          image: my-country-service:v1
           ports:
             - containerPort: 8082
